[package]
name = "solana_geyser_block_subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
solana-sdk = "2.2.1"
solana-client = "2.2.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
log = "0.4"
env_logger = "0.11"
eyre = "0.6"
url = "2.5"